plugins {
    id 'java'
    id 'maven-publish'
}

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.apache.httpcomponents:httpclient:4.5.13")
    implementation("net.sourceforge.nekohtml:nekohtml:1.9.10")
    implementation("xerces:xercesImpl:2.9.1")
    compileOnly("javax.servlet:servlet-api:2.3")
    implementation("org.openxri:openxri-client:1.2.1")
    implementation 'org.apache.commons:commons-io:1.3.2'

    testImplementation('junit:junit:4.13.2')
    testImplementation("org.mortbay.jetty:jetty:6.0.2")
    testImplementation("org.mortbay.jetty:jetty-util:6.0.2")
    testImplementation("org.assertj:assertj-core:3.22.0")
}



task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            artifact sourcesJar
        }
    }
}